# pycodehash

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  example.py  example_data.py  example_dependency.py  example_sql.py  example_sql_git.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: build.yml  docs.yml  pr_labels.yml  publish.yml
datasets/: index.html
dependencies/: index.html
docs/: code.md  datasets.md  dependencies.md  python_functions.md  sql_queries.md  timing.py
examples/: example_data.py  example_sql.py  example_sql_git.py
examples/equivalance/: check_hashes_equal.py  check_outputs_equal.py  sample1.py  sample2.py
notebooks/: Pycodehash.ipynb  function_definition_tracing.ipynb
playgrounds/: alg.md
playgrounds/alg/: ast_funcs.py  builtins_scope_visitor.py  call_visitor.py  debug.py  enclosing_scope_visitor.py  function_scope_visitor.py  hash_source_code.py  module_scope_visitor.py  scope_visitor.py  source.py  transform.py
playgrounds/alg/scope/: alo.py  annotate.py  annotator.py  group_similar_constructs.py  pull_scope.py  scope.py
playgrounds/example/: pyproject.toml
playgrounds/example/src/example/: README.md  nested_h.py  p1.py  p2.py  p3.py  p4.py  p6.py  p8.py  p9.py  src.py
playgrounds/example/src/example/p7/: __init__.py  x.py
python_functions/: index.html
sql_queries/: index.html
src/pycodehash/: __init__.py  decorators.py  hashing.py  inlining.py  node.py  preprocessing.py  stores.py  tracer.py  tracing.py  transfomers.py  unparse.py  utils.py  visitors.py
src/pycodehash/datasets/: __init__.py  approximate_hasher.py  boto3.py  hive.py  local.py  python.py  s3.py
src/pycodehash/dependency/: __init__.py  dependency.py
src/pycodehash/inlining/: __init__.py  call_visitor.py  fqn.py  inliner.py  source.py
src/pycodehash/preprocessing/: __init__.py  decorator_stripper.py  docstring_stripper.py  function_stripper.py  lines_transformer.py  typehint_stripper.py  whitespace_normalizer.py
src/pycodehash/python_function/: __init__.py  docstring_stripper.py  function_stripper.py  hashing.py  lines_transformer.py  ruff_processor.py  ruff_project_processor.py  source_processor.py  stores.py  tracing.py  transfomers.py  typehint_stripper.py  unparse.py  utils.py  whitespace_normalizer.py
src/pycodehash/python_module/: __init__.py  import_visitor.py  python_module_hasher.py
src/pycodehash/sql/: __init__.py  ast_transformer.py  ast_visitor.py  comment_filter.py  default_database_filter.py  references.py  sql_hasher.py  whitespace_filter.py
src/pycodehash/tracing/: __init__.py  files.py  stores.py  tracer.py  transfomers.py  utils.py  visitors.py
tests/: conftest.py  test_datasets_hive.py  test_datasets_local.py  test_decorator_stripper.py  test_hashing.py  test_inlining_call_visitor.py  test_inlining_inliner.py  test_preprocessing.py  test_source.py  test_tracing.py  test_tracing_files.py
tests/datasets/: test_approximate_hasher.py  test_hive.py  test_local.py  test_python.py  test_s3.py
tests/dependency/: test_dependency.py
tests/preprocessing/: test_preprocessing.py
tests/python_function/: test_hashing.py  test_preprocessing.py
tests/python_module/: test_python_module_hasher.py
tests/resources/: standalone.py  tracing_class.py  tracing_imports_overwrite.py  tracing_imports_relative.py  tracing_imports_star.py  tracing_imports_std.py  tracing_nested.py
tests/resources/inlined/: tliba_etl.py  tliba_tlibb_etl.py  tlibb_etl.py  tlibb_local.py
tests/resources/tliba/: pyproject.toml
tests/resources/tliba/src/tliba/: etl.py  summary.py
tests/resources/tliba/src/tliba/random/: __init__.py  rng.py
tests/resources/tlibb/: pyproject.toml
tests/resources/tlibb/src/tlibb/: __init__.py  a.py  constant.py  etl.py  local.py
tests/sql/: test_comment_filter.py  test_default_database_filter.py  test_references.py  test_sql_hasher.py  test_whitespace_filter.py
