[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycodehash"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
authors = [
  { name = "Max Baak", email = "max.baak@ing.com" },
  { name = "Simon Brugman", email = "simon.brugman@ing.com" },
  { name = "Ralph Urlus", email = "ralph.urlus@ing.com" },
]

dependencies = [
    'astunparse; python_version <= "3.9"',
]

[project.optional-dependencies]

test = [
    "pytest",
    "tliba @ {root:uri}/tests/resources/tliba"
]

[project.urls]
Source = "https://github.com/RUrlus/pycodehash"
Documentation = "https://github.com/RUrlus/pycodehash#readme"
Issues = "https://github.com/RUrlus/pycodehash/issues"

[tool.hatch.version]
path = "src/pycodehash/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pycodehash", ]
